--- a/DiceGameUOPWeek1/DiceGameUOPWeek4.csproj
+++ b/DiceGameUOPWeek1/DiceGameUOPWeek4.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Properties\Images.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
+    <Compile Include="Throw.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
